# ESPBM

./: .gitignore  License.txt  README.md  eye_state_prototype.py  pyproject.toml  sample_experiment.ipynb  setup.cfg  setup.py  tox.ini
data/: Proband_06_test_18000_EAR.csv  learned_prototype_example_th3.5_top9_no1.txt
sample_experiments/: fitting.ipynb  manual_extraction.ipynb  unsupervised_extractin.ipynb  unsupervised_extraction.ipynb
sample_experiments/data/: gaussian_params_example.csv  manual_prototype_example_fs_m100.txt
src/ebpm/: __init__.py  eye_state_prototype.py  manual.py  match.py  plot.py
src/espbm/: __init__.py  manual.py  match.py  plot.py  unsupervised.py
