[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.black]
line-length = 200

[tool.isort]
line_length = 200

[tool.flake8]
max-line-length = 200

[tool.ruff]
line-length = 200